# Abyssal

./: .gitignore  .prettierrc  Cargo.toml  README.md  certs.sh  devenv.nix  devenv.yaml  run.kdl
client/abyssal/: eslint.config.js  index.html  openapi-ts.config.ts  openapi.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
client/abyssal/src/: main.tsx  root.tsx  routes.tsx
client/abyssal/src/client/: ApiProvider.tsx  index.ts  util.ts
client/abyssal/src/localization/: index.tsx
client/abyssal/src/localization/lang/: en.json
client/abyssal/src/styles/: index.scss
client/abyssal/src/util/: logo.tsx  notifications.tsx  password_input.tsx
client/abyssal/src/util/theme/: resolver.ts  theme.ts
client/abyssal/src/views/layout/root/: index.tsx  style.scss
client/abyssal/src/views/login/: index.tsx  style.scss
crates/abyssal/: Cargo.toml  abyssal.dev.toml  build.rs.old
crates/abyssal/src/: cli.rs  error.rs  main.rs
crates/abyssal/src/models/: auth.rs  mod.rs  permission.rs  root_directory.rs  token.rs  user.rs
crates/abyssal/src/routes/: misc.rs  mod.rs  users.rs
crates/abyssal/src/types/: config.rs  mod.rs  permission.rs  str_uuid.rs
crates/abyssal/src/util/: collection.rs  database.rs  generate_resources.rs  mod.rs
crates/abyssal_common/: Cargo.toml
crates/abyssal_macros/: Cargo.toml
crates/abyssal_macros/src/: error.rs  lib.rs  permission.rs
