[workspace]
resolver = "3"
members = ["crates/abyssal", "crates/abyssal_common"]

[workspace.dependencies]
abyssal_common = { path = "./crates/abyssal_common", version = "*" }
bon = "3.8.1"
chrono = "0.4.42"
figment = "0.10.19"
okapi = "0.7.0"
parking_lot = "0.12.5"
rocket = "0.5.1"
rocket_db_pools = "0.2.0"
rocket_okapi = "0.9.0"
rocket_ws = "0.1.1"
schemars = "1.1.0"
sea-orm = "1.1.19"
sea-orm-rocket = "0.6.0"
serde = "1.0.228"
serde_json = "1.0.147"
tokio = "1.48.0"
uuid = "1.19.0"
