[workspace]
resolver = "3"
members = ["crates/abyssal", "crates/abyssal_macros"]

[workspace.dependencies]
abyssal_macros = { path = "./crates/abyssal_macros", version = "*" }
anyhow = "1.0.100"
bon = "3.8.1"
chrono = "0.4.42"
figment = "0.10.19"
okapi = "0.7.0"
parking_lot = "0.12.5"
rocket = "0.5.1"
rocket_db_pools = "0.2.0"
rocket_okapi = "0.9.0"
rocket_ws = "0.1.1"
schemars = "1.2.0"
sea-orm = {version = "=2.0.0-rc.22"}
sea-query = {git = "https://github.com/SeaQL/sea-query.git", rev = "036d37c17ef1e37cb1bea4c468c4e7284e1b0e0b"}
serde = "1.0.228"
serde_json = "1.0.147"
thiserror = "2.0.17"
tokio = "1.48.0"
uuid = "1.19.0"
clap = "4.5.53"
convert_case = "0.10.0"
darling = "0.23.0"
getset = "0.1.6"
manyhow = "0.11.4"
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = "2.0.111"
