[package]
name = "abyssal"
version = "0.1.0"
edition = "2024"

[dependencies]
abyssal_macros = { workspace = true }
anyhow = { workspace = true }
bon = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["cargo", "derive", "env", "string"] }
figment = { workspace = true, features = ["env", "toml"] }
getset = { workspace = true }
okapi = { workspace = true, features = ["impl_json_schema", "preserve_order"] }
parking_lot = { workspace = true, features = ["arc_lock", "send_guard", "serde"] }
rocket = { workspace = true, features = ["json", "secrets", "tls", "uuid"] }
rocket_db_pools = { workspace = true }
rocket_okapi = { workspace = true, features = [
  "preserve_order",
  "rocket_db_pools",
  "rocket_ws",
  "secrets",
  "swagger",
  "uuid"
] }
rocket_ws = { workspace = true }
sea-orm = { workspace = true, features = [
  "proxy",
  "runtime-tokio",
  "sqlx-mysql",
  "sqlx-sqlite",
  "sqlx-postgres",
  "with-json",
  "with-bigdecimal",
  "postgres-array", 
  "postgres-vector"
] }
schemars = { workspace = true, features = [
  "chrono04",
  "preserve_order",
  "uuid1"
] }
sea-query = {workspace = true}
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["fast-rng", "serde", "v4"] }
