[package]
name = "abyssal"
version = "0.1.0"
edition = "2024"

[dependencies]
abyssal_macros = { workspace = true }
anyhow = { workspace = true }
argon2 = { workspace = true, features = ["std", "simple"] }
bon = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["cargo", "derive", "env", "string"] }
figment = { workspace = true, features = ["env", "toml"] }
getset = { workspace = true }
okapi = { workspace = true, features = ["impl_json_schema", "preserve_order"] }
parking_lot = { workspace = true, features = ["arc_lock", "send_guard", "serde"] }
rocket = { workspace = true, features = ["json", "secrets", "tls", "uuid"] }
rocket_okapi = { workspace = true, features = [
  "preserve_order",
  "rocket_db_pools",
  "rocket_ws",
  "secrets",
  "rapidoc",
  "uuid"
] }
rocket_ws = { workspace = true }
schemars = { workspace = true, features = [
  "chrono",
  "preserve_order",
  "uuid"
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["fast-rng", "serde", "v4"] }
serde_with = { workspace = true }
mongodb = { workspace = true, features = ["bson-3"] }
bson = { workspace = true, features = ["chrono-0_4", "serde", "serde_json-1", "serde_with-3", "uuid-1"] }
strum = { workspace = true, features = ["derive"] }
spire_enum = { workspace = true }
base64 = { workspace = true }
sled = { version = "0.34.7", features = ["compression"] }
