[package]
name = "abyssal_macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
convert_case = { workspace = true }
darling = { workspace = true }
manyhow = { workspace = true, features = ["darling"] }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }